fix: jpms/warning fixes for maven build
Signed-off-by: Sam Gammon <sam@elide.ventures>